Revise LP4 copy

--- a/lp4/index.html
+++ b/lp4/index.html
@@ -195,17 +195,15 @@
             </div>
 
             <div class="content-text">
-                <p>A growing number of people over 45 are quietly using a simple ice water trick to burn off stubborn fat — not during workouts, but while they sleep.</p>
+                <p>Forget everything you think you know about losing weight after 45. The truth is, that stubborn fat around your belly, hips, and arms isn't your fault&mdash;and the gym is the last place you'll get rid of it.</p>
 
-                <p>This isn’t another fad or gimmick. It’s a Harvard-backed discovery that’s flipping everything we thought we knew about metabolism on its head.</p>
+                <p>Sounds impossible, right? But listen. A recent Harvard discovery has revealed why some people are melting away fat not by working out, but while they sleep.</p>
 
-                <p>This strange “Ice Water Hack” activates what scientists now call your body’s slimming switches — fat-burning engines that slow down with age but can be safely reawakened using this six-second bedtime ritual.</p>
+                <p>This isn't a gimmick. It&rsquo;s a bizarre 'Ice Water Hack' that takes six seconds before bed. This ritual activates what scientists call your body&rsquo;s &lsquo;slimming switches&rsquo;&mdash;powerful fat-burning engines that go dormant with age.</p>
 
-                <p>It’s so simple and powerful, it’s threatening to disrupt the entire weight loss industry — and major companies are doing everything they can to keep it hidden.</p>
+                <p>Think of it like flicking a switch to turn your metabolism back on, forcing your body to dissolve the most stubborn fat for fuel overnight. It&rsquo;s so powerful that the billion-dollar weight loss industry is trying to scrub this information from the internet. They make money when you fail.</p>
 
-                <p>This presentation may not stay online for long.</p>
-
-                <p><strong>Watch it now before it disappears.</strong></p>
+                <p>The short presentation revealing exactly how to do it is online, but they're actively trying to get it taken down. Watch it now while you still can.</p>
             </div>
 
             <div class="button-container">
