Improve LP1 mobile layout and update headline

--- a/lp1/index.html
+++ b/lp1/index.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Untitled</title>
-  
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ice Hack Quiz - Transformational Weight Loss</title>
+    <title>Please answer the questions below to see if you qualify to view this short educational video.</title>
     <link href="https://ext.same-assets.com/1635112822/351187734.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
     <style>
         @font-face {
@@ -253,21 +243,15 @@
         }
 
         @media (max-width: 768px) {
-            .form__wrapper {
-                padding: 20px;
-            }
-
-            .title__main h1 {
-                font-size: 1.8em;
-            }
-
-            .title__main h2 {
-                font-size: 1.1em;
-            }
-
-            .title p {
-                font-size: 1.4em;
-            }
+            .progress-bar { margin-bottom: 20px; }
+            body { padding: 10px; }
+            .form__wrapper { padding: 20px 15px; box-shadow: none; }
+            .title__main h1 { font-size: 1.6em; }
+            .title__main h2 { font-size: 1em; }
+            .title p { font-size: 1.2em; }
+            .elem__radio { max-width: 100%; }
+            .elem__radio label { font-size: 1.1em; padding: 15px; }
+            .next-btn { width: 100%; font-size: 1.1em; padding: 15px; }
         }
     </style>
 </head>
@@ -279,7 +263,7 @@
 
         <form id="quizForm">
             <div class="title__main">
-                <h1>Most People Have No Idea About This Transformational Ice Hack... It Has Been Life Changing</h1>
+                <h1>Please answer the questions below to see if you qualify to view this short educational video.</h1>
                 <h2>Take The Short Quiz Below To See If It Can Work For You Too</h2>
             </div>
 
