--- a/lp1/index.html
+++ b/lp1/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Untitled</title>
+  
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Please answer the questions below to see if you qualify to view this short educational video.</title>
+    <title>Coffee Hack Quiz - Transformational Weight Loss</title>
     <link href="https://ext.same-assets.com/1635112822/351187734.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
     <style>
         @font-face {
@@ -243,15 +253,21 @@
         }
 
         @media (max-width: 768px) {
-            .progress-bar { margin-bottom: 20px; }
-            body { padding: 10px; }
-            .form__wrapper { padding: 20px 15px; box-shadow: none; }
-            .title__main h1 { font-size: 1.6em; }
-            .title__main h2 { font-size: 1em; }
-            .title p { font-size: 1.2em; }
-            .elem__radio { max-width: 100%; }
-            .elem__radio label { font-size: 1.1em; padding: 15px; }
-            .next-btn { width: 100%; font-size: 1.1em; padding: 15px; }
+            .form__wrapper {
+                padding: 20px;
+            }
+
+            .title__main h1 {
+                font-size: 1.8em;
+            }
+
+            .title__main h2 {
+                font-size: 1.1em;
+            }
+
+            .title p {
+                font-size: 1.4em;
+            }
         }
     </style>
 </head>
@@ -263,7 +279,7 @@
 
         <form id="quizForm">
             <div class="title__main">
-                <h1>Please answer the questions below to see if you qualify to view this short educational video.</h1>
+                <h1>Most People Have No Idea About This Transformational Coffee Hack... It Has Been Life Changing</h1>
                 <h2>Take The Short Quiz Below To See If It Can Work For You Too</h2>
             </div>
 
@@ -329,7 +345,7 @@
 
             <div class="form__step" data-step="5">
                 <div class="title">
-                    <p>Are you interested in seeing how an easy ice hack can help you burn up to 2.3 lbs of stubborn belly fat every 48 hours?</p>
+                    <p>Are you interested in seeing how an easy coffee hack can help you burn up to 2.3 lbs of stubborn belly fat every 48 hours?</p>
                 </div>
                 <div class="elem__radio">
                     <input type="radio" id="radio10" name="step5" value="Yes">
@@ -367,10 +383,10 @@
             </div>
             <div class="desc">
                 <p>Thank You For Completing Our Quiz!</p>
-                <span>Your Results Qualify You For The "10-Second Exotic Ice Hack"</span>
+                <span>Your Results Qualify You For The "10-Second Exotic Coffee Hack"</span>
             </div>
             <div class="bottom">
-                <a href="https://track.nutr.site/click" target="_blank">
+                <a href="#" target="_blank">
                     <span class="main">Click Here For Full Video Instructions</span>
                     <span class="sub">AND RECEIVE YOUR COMPLETE BLUEPRINT</span>
                 </a>
@@ -447,6 +463,9 @@
         updateProgress();
         checkCurrentStepSelection();
     </script>
-    <script src="https://track.nutr.site/unilpclick.js?attribution=lastpaid&cookiedomain=&cookieduration=90&defaultcampaignid=&regviewonce=false"></script>
+</body>
+</html>
+<!-- partial -->
+  
 </body>
 </html>
