--- a/lp1/index.html
+++ b/lp1/index.html
@@ -27,8 +27,8 @@
             line-height: 1.6;
             min-height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
             padding: 20px;
         }
 
@@ -40,6 +40,10 @@
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             padding: 40px;
             text-align: center;
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         .progress-bar {
@@ -245,6 +249,7 @@
             text-align: center;
             padding: 20px 10px;
             line-height: 1.4;
+            margin-top: 20px;
         }
 
         footer a {
