--- a/lp1/index.html
+++ b/lp1/index.html
@@ -124,26 +124,6 @@
             background-color: #3577d4;
         }
 
-        .next-btn {
-            background-color: #4a9eff;
-            color: white;
-            border: none;
-            padding: 15px 30px;
-            font-size: 1.2em;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 30px;
-            transition: background-color 0.3s ease;
-            display: none;
-        }
-
-        .next-btn:hover {
-            background-color: #3a8eef;
-        }
-
-        .next-btn.show {
-            display: inline-block;
-        }
 
         .modal__wrapper {
             display: none;
@@ -267,7 +247,6 @@
             .title p { font-size: 1.2em; }
             .elem__radio { max-width: 100%; }
             .elem__radio label { font-size: 1em; padding: 15px; max-width: 100%; }
-            .next-btn { width: 100%; font-size: 1.1em; padding: 15px; }
         }
     </style>
 </head>
@@ -371,7 +350,6 @@
                 </div>
             </div>
 
-            <button type="button" class="next-btn" id="nextBtn">Next Question</button>
         </form>
     </div>
 
@@ -428,33 +406,16 @@
             updateProgress();
         }
 
-        function checkCurrentStepSelection() {
-            const currentStepElement = document.querySelector(`[data-step="${currentStep}"]`);
-            const selectedInput = currentStepElement.querySelector('input[type="radio"]:checked');
-            const nextBtn = document.getElementById('nextBtn');
-
-            if (selectedInput) {
-                nextBtn.classList.add('show');
-            } else {
-                nextBtn.classList.remove('show');
-            }
-        }
-
-        // Add event listeners to all radio buttons
+        // Advance automatically when an option is selected
         document.querySelectorAll('input[type="radio"]').forEach(radio => {
-            radio.addEventListener('change', checkCurrentStepSelection);
-        });
-
-        // Next button functionality
-        document.getElementById('nextBtn').addEventListener('click', function() {
-            if (currentStep < totalSteps) {
-                currentStep++;
-                showStep(currentStep);
-                checkCurrentStepSelection();
-            } else {
-                // Show modal
-                document.getElementById('modal').classList.add('show');
-            }
+            radio.addEventListener('change', function() {
+                if (currentStep < totalSteps) {
+                    currentStep++;
+                    showStep(currentStep);
+                } else {
+                    document.getElementById('modal').classList.add('show');
+                }
+            });
         });
 
         // Close modal
@@ -472,7 +433,6 @@
 
         // Initialize
         updateProgress();
-        checkCurrentStepSelection();
     </script>
     <script src="https://track.nutr.site/unilpclick.js?attribution=lastpaid&cookiedomain=&cookieduration=90&defaultcampaignid=&regviewonce=false"></script>
 </body>
