Update footer domain to glow-and-thrive

--- a/lp2/index.html
+++ b/lp2/index.html
@@ -254,7 +254,7 @@
 
   
   <footer>
-    <p>&copy; 2025 nutrition-hub.org. All rights reserved.</p>
+    <p>&copy; 2025 Glow-and-thrive.org. All rights reserved.</p>
     <p>This site is not part of, nor endorsed by, Facebook™. Facebook™ is a trademark of Meta Platforms, Inc.</p>
     <p>
       <a href="terms.html">Terms</a> |
