--- a/lp2/video.html
+++ b/lp2/video.html
@@ -98,7 +98,7 @@
   </a>
 
   <footer>
-    <p>nutrition-hub.org © All Rights Reserved</p>
+    <p>Glow-and-thrive.org © All Rights Reserved</p>
     <p>
       <a href="disclaimer.html">Disclaimer</a> |
       <a href="terms.html">Terms and Conditions</a>
