--- a/lp3/index.html
+++ b/lp3/index.html
@@ -310,7 +310,7 @@
   
   <footer>
     <div class="container">
-      <p>Copyright 2025 nutrition-hub.org. All rights reserved.</p>
+      <p>COPYRIGHT 2025 Glow-and-thrive.org. All rights reserved.</p>
       <div class="footer-nav">
         <a href="disclaimer.html">Disclaimer</a> |
         <a href="terms.html">Terms of Service</a> |
