--- a/lp5/index.html
+++ b/lp5/index.html
@@ -199,7 +199,7 @@
 
   <footer>
     <p>
-      Copyright 2025 nutrition-hub.org. All rights reserved.<br><br>
+      Copyright 2025 Glow-and-thrive.org. All rights reserved.<br><br>
       This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.<br><br>
       <a href="terms.html" target="_blank">Terms of Service</a> |
       <a href="disclaimer.html" target="_blank">Disclaimer</a> |
