--- a/lp4/index.html
+++ b/lp4/index.html
@@ -234,7 +234,7 @@
 
         
         <footer class="footer">
-            <p>Copyright 2025 nutrition-hub.org. All rights reserved.</p>
+            <p>Copyright 2025 Glow-and-thrive.org. All rights reserved.</p>
             <p>This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.</p>
             <div class="footer-links">
                 <a href="privacy.html">Privacy Policy</a> |
