--- a/lp4/terms.html
+++ b/lp4/terms.html
@@ -160,13 +160,13 @@
         </div>
 
         <footer class="footer">
-            <p>Copyright 2025 nutrition-hub.org. All rights reserved.</p>
+            <p>Copyright 2025 Glow-and-thrive.org. All rights reserved.</p>
             <p>This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.</p>
             <div class="footer-links">
-                <a href="https://nutrition-hub.org/privacy-policy">Privacy Policy</a> |
+                <a href="https://Glow-and-thrive.org/privacy-policy">Privacy Policy</a> |
                 <a href="terms.html">Terms of Service</a> |
                 <a href="disclaimer.html">Disclaimer</a> |
-                <a href="https://nutrition-hub.org/contact">Contact</a>
+                <a href="https://Glow-and-thrive.org/contact">Contact</a>
             </div>
         </footer>
     </div>
