--- a/lp5/terms.html
+++ b/lp5/terms.html
@@ -130,7 +130,7 @@
     </div>
 
     <div class="footer">
-        <p>Copyright 2025 nutrition-hub.org. All rights reserved.</p>
+        <p>Copyright 2025 Glow-and-thrive.org. All rights reserved.</p>
     </div>
 </body>
 </html>
