Replace Nutrition Hub branding

--- a/lp1/privacy-policy.html
+++ b/lp1/privacy-policy.html
@@ -12,7 +12,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy - Nutrition Hub</title>
+    <title>Privacy Policy - Glow and Thrive</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,7 +35,7 @@
     <p><strong>Effective Date:</strong> <span id="effective-date"></span></p>
 
     <h2>1. Introduction</h2>
-    <p>Welcome to <a href="https://nutrition-hub.org">nutrition-hub.org</a> ("we," "our," "us"). We are committed to protecting your privacy and ensuring that your personal information is handled securely and responsibly. This Privacy Policy outlines how we collect, use, and safeguard your information when you visit our website.</p>
+    <p>Welcome to <a href="https://glow-and-thrive.org">glow-and-thrive.org</a> ("we," "our," "us"). We are committed to protecting your privacy and ensuring that your personal information is handled securely and responsibly. This Privacy Policy outlines how we collect, use, and safeguard your information when you visit our website.</p>
 
     <h2>2. Information We Collect</h2>
     <h3>Personal Information</h3>
