--- a/lp1/disclaimer.html
+++ b/lp1/disclaimer.html
@@ -12,7 +12,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Disclaimer - Nutrition Hub</title>
+    <title>Disclaimer - Glow and Thrive</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,28 +35,28 @@
     <p><strong>Effective Date:</strong> February 25, 2025</p>
 
     <h2>1. Educational and Informational Purposes Only</h2>
-    <p>The content on <a href="https://nutrition-hub.org">nutrition-hub.org</a> is provided for educational and informational purposes only. It is not intended as, and shall not be construed as, professional medical advice, diagnosis, or treatment. Always seek the guidance of your physician or other qualified health professionals with any questions you may have regarding your health or a medical condition.</p>
+    <p>The content on <a href="https://glow-and-thrive.org">glow-and-thrive.org</a> is provided for educational and informational purposes only. It is not intended as, and shall not be construed as, professional medical advice, diagnosis, or treatment. Always seek the guidance of your physician or other qualified health professionals with any questions you may have regarding your health or a medical condition.</p>
 
     <h2>2. Not a Substitute for Professional Advice</h2>
     <p>While we strive to provide accurate and up-to-date information, the content on this website should not replace professional advice tailored to your specific circumstances. Do not disregard, avoid, or delay obtaining medical or health-related advice from your healthcare professional because of something you may have read on this site.</p>
 
     <h2>3. No Guarantees</h2>
-    <p>We do not guarantee or warrant the accuracy, completeness, or timeliness of the information provided on this website. Your use of the content is at your own risk. <a href="https://nutrition-hub.org">nutrition-hub.org</a> and its affiliates shall not be liable for any losses or damages arising from the use or reliance on information provided on this site.</p>
+    <p>We do not guarantee or warrant the accuracy, completeness, or timeliness of the information provided on this website. Your use of the content is at your own risk. <a href="https://glow-and-thrive.org">glow-and-thrive.org</a> and its affiliates shall not be liable for any losses or damages arising from the use or reliance on information provided on this site.</p>
 
     <h2>4. External Links</h2>
-    <p>This website may contain links to external websites for additional information and convenience. <a href="https://nutrition-hub.org">nutrition-hub.org</a> does not endorse, guarantee, or assume responsibility for the accuracy or reliability of any information offered by third-party websites linked through our site.</p>
+    <p>This website may contain links to external websites for additional information and convenience. <a href="https://glow-and-thrive.org">glow-and-thrive.org</a> does not endorse, guarantee, or assume responsibility for the accuracy or reliability of any information offered by third-party websites linked through our site.</p>
 
     <h2>5. Testimonials and Results</h2>
     <p>From time to time, we may share testimonials or experiences of individuals on our website. These are individual results and do not guarantee or represent that you will achieve the same or similar outcomes. Your results may vary based on your unique circumstances, dedication, and adherence to the information provided.</p>
 
     <h2>6. Affiliate Disclosure</h2>
-    <p><a href="https://nutrition-hub.org">nutrition-hub.org</a> may engage in affiliate marketing, which means we may earn commissions from products or services purchased through links on our site. This comes at no additional cost to you. We only recommend products or services that we believe will add value to our readers.</p>
+    <p><a href="https://glow-and-thrive.org">glow-and-thrive.org</a> may engage in affiliate marketing, which means we may earn commissions from products or services purchased through links on our site. This comes at no additional cost to you. We only recommend products or services that we believe will add value to our readers.</p>
 
     <h2>7. Changes to This Disclaimer</h2>
     <p>We reserve the right to modify this Disclaimer at any time. Any changes will be reflected with an updated effective date. It is your responsibility to review this Disclaimer periodically for updates.</p>
 
     <h2>8. Contact Us</h2>
-    <p>If you have any questions or concerns regarding this Disclaimer, please contact us at: info@nutrition-hub.org
+    <p>If you have any questions or concerns regarding this Disclaimer, please contact us at: info@glow-and-thrive.org
     </p>
 </body>
 </html>
