--- a/lp4/disclaimer.html
+++ b/lp4/disclaimer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disclaimer - nutrition-hub.org</title>
+    <title>Disclaimer - glow-and-thrive.org</title>
     <style>
         /* Reset CSS */
         * {
@@ -114,7 +114,7 @@
                 <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
 
                 <h2>Website Disclaimer</h2>
-                <p>The information provided by nutrition-hub.org ("we," "us," or "our") on our website is for general informational purposes only. All information on the site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the site.</p>
+                <p>The information provided by glow-and-thrive.org ("we," "us," or "our") on our website is for general informational purposes only. All information on the site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the site.</p>
 
                 <p>Under no circumstance shall we have any liability to you for any loss or damage of any kind incurred as a result of the use of the site or reliance on any information provided on the site. Your use of the site and your reliance on any information on the site is solely at your own risk.</p>
 
