--- a/lp4/index.html
+++ b/lp4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ice Water Hack - nutrition-hub.org</title>
+    <title>Ice Water Hack - glow-and-thrive.org</title>
     <style>
         /* Reset CSS */
         * {
