--- a/lp5/contact.html
+++ b/lp5/contact.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>Contact Us</h1>
-  <p>If you have any questions, feel free to reach us at <strong>support@nutrition-hub.org</strong>.</p>
+  <p>If you have any questions, feel free to reach us at <strong>support@glow-and-thrive.org</strong>.</p>
 </body>
 </html>
