Add terms page for LP1

--- a/lp3/terms.html
+++ b/lp3/terms.html
@@ -88,7 +88,7 @@
 
         <p>Last updated: April 6, 2025</p>
 
-        <p>Please read these Terms of Service ("Terms", "Terms of Service") carefully before using the Purple Peel Exploit website operated by nutrition-hub.org.</p>
+        <p>Please read these Terms of Service ("Terms", "Terms of Service") carefully before using the Purple Peel Exploit website operated by glow-and-thrive.org.</p>
 
         <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
 
@@ -112,9 +112,9 @@
 
         <h2>Links To Other Web Sites</h2>
 
-        <p>Our Service may contain links to third-party web sites or services that are not owned or controlled by nutrition-hub.org.</p>
+        <p>Our Service may contain links to third-party web sites or services that are not owned or controlled by glow-and-thrive.org.</p>
 
-        <p>nutrition-hub.org has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that nutrition-hub.org shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
+        <p>glow-and-thrive.org has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that glow-and-thrive.org shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
 
         <h2>Changes</h2>
 
@@ -130,7 +130,7 @@
     </div>
 
     <div class="footer">
-        <p>Copyright 2025 nutrition-hub.org. All rights reserved.</p>
+        <p>Copyright 2025 Glow-and-thrive.org. All rights reserved.</p>
     </div>
 </body>
 </html>
