--- a/lp4/index.html
+++ b/lp4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ice Water Hack - nutrition-hub.org</title>
+    <title>Ice Water Hack - glow-and-thrive.org</title>
     <style>
         /* Reset CSS */
         * {
@@ -234,7 +234,7 @@
 
         
         <footer class="footer">
-            <p>Copyright 2025 nutrition-hub.org. All rights reserved.</p>
+            <p>Copyright 2025 Glow-and-thrive.org. All rights reserved.</p>
             <p>This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.</p>
             <div class="footer-links">
                 <a href="privacy.html">Privacy Policy</a> |
