--- a/lp4/terms.html
+++ b/lp4/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - nutrition-hub.org</title>
+    <title>Terms of Service - glow-and-thrive.org</title>
     <style>
         /* Reset CSS */
         * {
@@ -123,34 +123,34 @@
                 <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
 
                 <h2>1. Terms</h2>
-                <p>By accessing the website at nutrition-hub.org, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
+                <p>By accessing the website at glow-and-thrive.org, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
 
                 <h2>2. Use License</h2>
-                <p>Permission is granted to temporarily download one copy of the materials (information or software) on nutrition-hub.org's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:</p>
+                <p>Permission is granted to temporarily download one copy of the materials (information or software) on glow-and-thrive.org's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:</p>
                 <ul>
                     <li>modify or copy the materials;</li>
                     <li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
-                    <li>attempt to decompile or reverse engineer any software contained on nutrition-hub.org's website;</li>
+                    <li>attempt to decompile or reverse engineer any software contained on glow-and-thrive.org's website;</li>
                     <li>remove any copyright or other proprietary notations from the materials; or</li>
                     <li>transfer the materials to another person or "mirror" the materials on any other server.</li>
                 </ul>
-                <p>This license shall automatically terminate if you violate any of these restrictions and may be terminated by nutrition-hub.org at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</p>
+                <p>This license shall automatically terminate if you violate any of these restrictions and may be terminated by glow-and-thrive.org at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</p>
 
                 <h2>3. Disclaimer</h2>
-                <p>The materials on nutrition-hub.org's website are provided on an 'as is' basis. nutrition-hub.org makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</p>
-                <p>Further, nutrition-hub.org does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site.</p>
+                <p>The materials on glow-and-thrive.org's website are provided on an 'as is' basis. glow-and-thrive.org makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</p>
+                <p>Further, glow-and-thrive.org does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site.</p>
 
                 <h2>4. Limitations</h2>
-                <p>In no event shall nutrition-hub.org or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on nutrition-hub.org's website, even if nutrition-hub.org or a nutrition-hub.org authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
+                <p>In no event shall glow-and-thrive.org or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on glow-and-thrive.org's website, even if glow-and-thrive.org or a glow-and-thrive.org authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
 
                 <h2>5. Accuracy of Materials</h2>
-                <p>The materials appearing on nutrition-hub.org's website could include technical, typographical, or photographic errors. nutrition-hub.org does not warrant that any of the materials on its website are accurate, complete or current. nutrition-hub.org may make changes to the materials contained on its website at any time without notice. However nutrition-hub.org does not make any commitment to update the materials.</p>
+                <p>The materials appearing on glow-and-thrive.org's website could include technical, typographical, or photographic errors. glow-and-thrive.org does not warrant that any of the materials on its website are accurate, complete or current. glow-and-thrive.org may make changes to the materials contained on its website at any time without notice. However glow-and-thrive.org does not make any commitment to update the materials.</p>
 
                 <h2>6. Links</h2>
-                <p>nutrition-hub.org has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by nutrition-hub.org of the site. Use of any such linked website is at the user's own risk.</p>
+                <p>glow-and-thrive.org has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by glow-and-thrive.org of the site. Use of any such linked website is at the user's own risk.</p>
 
                 <h2>7. Modifications</h2>
-                <p>nutrition-hub.org may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.</p>
+                <p>glow-and-thrive.org may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.</p>
 
                 <h2>8. Governing Law</h2>
                 <p>These terms and conditions are governed by and construed in accordance with the laws and you irrevocably submit to the exclusive jurisdiction of the courts in that location.</p>
@@ -160,13 +160,13 @@
         </div>
 
         <footer class="footer">
-            <p>Copyright 2025 nutrition-hub.org. All rights reserved.</p>
+            <p>Copyright 2025 Glow-and-thrive.org. All rights reserved.</p>
             <p>This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.</p>
             <div class="footer-links">
-                <a href="https://nutrition-hub.org/privacy-policy">Privacy Policy</a> |
+                <a href="https://Glow-and-thrive.org/privacy-policy">Privacy Policy</a> |
                 <a href="terms.html">Terms of Service</a> |
                 <a href="disclaimer.html">Disclaimer</a> |
-                <a href="https://nutrition-hub.org/contact">Contact</a>
+                <a href="https://Glow-and-thrive.org/contact">Contact</a>
             </div>
         </footer>
     </div>
