Style lp1 footers

--- a/lp1/privacy.html
+++ b/lp1/privacy.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy - Nutrition Hub</title>
+  <title>Privacy Policy - Glow and Thrive</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -27,9 +27,9 @@
     }
     footer {
       text-align: center;
-      font-size: 12px;
+      font-size: 10px;
       margin-top: 40px;
-      color: #aaa;
+      color: #999;
     }
   </style>
 </head>
@@ -37,7 +37,7 @@
   <h1>Privacy Policy</h1>
   <p>Effective Date: January 1, 2025</p>
 
-  <p>At Nutrition Hub, your privacy is important to us. This privacy policy outlines the types of personal information we collect, how we use it, and the steps we take to protect it.</p>
+  <p>At Glow and Thrive, your privacy is important to us. This privacy policy outlines the types of personal information we collect, how we use it, and the steps we take to protect it.</p>
 
   <h2>Information We Collect</h2>
   <ul>
@@ -70,10 +70,10 @@
 
   <h2>Contact Us</h2>
   <p>If you have any questions about this policy, you can contact us at: <br>
-  <strong>support@nutrition-hub.org</strong></p>
+  <strong>support@glow-and-thrive.org</strong></p>
 
   <footer>
-    &copy; 2025 Nutrition Hub. All rights reserved.
+    &copy; 2025 Glow and Thrive. All rights reserved.
   </footer>
 </body>
 </html>
