Remove confidential notice and update button color

--- a/lp1/index.html
+++ b/lp1/index.html
@@ -190,7 +190,7 @@
 
         .bottom a {
             display: inline-block;
-            background: linear-gradient(135deg, #c25359, #ec9fa0);
+            background: linear-gradient(135deg, #28a745, #85e084);
             color: white;
             text-decoration: none;
             padding: 20px 30px;
@@ -201,7 +201,7 @@
 
         .bottom a:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(194, 83, 89, 0.3);
+            box-shadow: 0 10px 20px rgba(40, 167, 69, 0.3);
         }
 
         .bottom .main {
@@ -375,7 +375,6 @@
                     <span class="main">Click Here For Full Video Instructions</span>
                     <span class="sub">AND RECEIVE YOUR COMPLETE BLUEPRINT</span>
                 </a>
-                <span>(Your results are confidential - please do not share this link)</span>
             </div>
         </div>
     </div>
