Update quiz landing page text

--- a/lp1/index.html
+++ b/lp1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Please answer the questions below to see if you qualify to view this short educational video.</title>
+    <title>WARNING: This Controversial Harvard-Backed Method Is Not For Everyone.</title>
     <link href="https://ext.same-assets.com/1635112822/351187734.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
     <style>
         @font-face {
@@ -239,7 +239,10 @@
             margin: 0 5px;
         }
 
- main
+        .smaller-text {
+            font-size: 0.9em;
+        }
+
         @media (max-width: 768px) {
             .progress-bar { margin-bottom: 20px; }
             body { padding: 10px; }
@@ -249,11 +252,12 @@
             .title p { font-size: 1.2em; }
             .elem__radio { max-width: 100%; }
 
+            .smaller-text { font-size: 0.95em; }
+
             .elem__radio label { font-size: 1em; padding: 15px; max-width: 100%; }
 
             .elem__radio label { font-size: 1.1em; padding: 15px; }
             .next-btn { width: 100%; font-size: 1.1em; padding: 15px; }
- main
         }
     </style>
 </head>
@@ -265,8 +269,8 @@
 
         <form id="quizForm">
             <div class="title__main">
-                <h1>Please answer the questions below to see if you qualify to view this short educational video.</h1>
-                <h2>Take The Short Quiz Below To See If It Can Work For You Too</h2>
+                <h1>WARNING: This Controversial Harvard-Backed Method Is Not For Everyone.</h1>
+                <h2>Take The 4-Question Quiz Below To Confirm You Qualify To View This Private Presentation</h2>
             </div>
 
             <div class="form__step current" data-step="1">
@@ -345,7 +349,7 @@
 
             <div class="form__step" data-step="6">
                 <div class="title">
-                    <p>This free video tutorial reveals a new, easy method for losing weight quickly and keeping it off. Do you promise to watch the entire video?</p>
+                    <p class="smaller-text">This free video tutorial reveals the bizarre &quot;Alpine Ice Hack&quot; that is helping people over 45 dissolve stubborn fat while they sleep. This information is highly controversial and is being actively targeted by the weight-loss industry. We only want to share it with people who are serious about changing their lives.</p>
                 </div>
                 <div class="elem__radio">
                     <input type="radio" id="radio12" name="step6" value="Yes">
