Refine quiz subtitle and reduce disclaimer text size

--- a/lp1/index.html
+++ b/lp1/index.html
@@ -240,7 +240,7 @@
         }
 
         .smaller-text {
-            font-size: 0.9em;
+            font-size: 0.85em;
         }
 
         @media (max-width: 768px) {
@@ -252,7 +252,7 @@
             .title p { font-size: 1.2em; }
             .elem__radio { max-width: 100%; }
 
-            .smaller-text { font-size: 0.95em; }
+            .smaller-text { font-size: 0.9em; }
 
             .elem__radio label { font-size: 1em; padding: 15px; max-width: 100%; }
 
@@ -270,7 +270,7 @@
         <form id="quizForm">
             <div class="title__main">
                 <h1>WARNING: This Controversial Harvard-Backed Method Is Not For Everyone.</h1>
-                <h2>Take The 4-Question Quiz Below To Confirm You Qualify To View This Private Presentation</h2>
+                <h2>Take The 5-Second Quiz Below To Confirm You Qualify To View This Private Presentation</h2>
             </div>
 
             <div class="form__step current" data-step="1">
