--- a/lp4/index.html
+++ b/lp4/index.html
@@ -122,6 +122,38 @@
         }
 
 
+        /* Quick info icons */
+        .info-icons {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            max-width: 760px;
+            margin: 10px auto;
+            font-size: 16px;
+        }
+
+        .info-icons span {
+            display: flex;
+            align-items: center;
+        }
+
+        /* Urgent scarcity bar */
+        .scarcity-bar {
+            background-color: #fff3cd;
+            border: 1px solid #ffeeba;
+            color: #856404;
+            font-weight: bold;
+            padding: 15px;
+            max-width: 760px;
+            margin: 20px auto;
+            border-radius: 5px;
+            text-align: center;
+            font-size: 16px;
+        }
+
+        .scarcity-bar p {
+            margin-bottom: 8px;
+        }
         /* Scientific References */
         .references-section {
             margin: 30px 0;
@@ -202,6 +234,9 @@
                     <img src="image_for_lp.png" alt="Ice Water Hack Video" class="video-image">
                 </a>
             </div>
+            <div class="info-icons">
+                <span>⭐ Rated 4.9/5 by 17,290+ Happy Customers</span> | <span>🛡️ 100% Natural Ingredients</span> | <span>🇺🇸 Made in the USA</span>
+            </div>
 
             <div class="content-text">
                 <p>Forget everything you think you know about losing weight after 45. The truth is, that stubborn fat around your belly, hips, and arms isn't your fault&mdash;and the gym is the last place you'll get rid of it.</p>
@@ -217,6 +252,11 @@
 
             <div class="button-container">
                 <a href="https://track.nutr.site/click" class="action-button" target="_blank">Reveal The Ice Water Hack Now</a>
+            </div>
+            <div class="scarcity-bar">
+                <p>WARNING: Due to expected high demand, this presentation will be taken offline once all spots are claimed.</p>
+                <p>Official Site: ✅ This is the Official & Secure Page.</p>
+                <p>Availability: 🟢 GUARANTEED... for the next 24 hours only.</p>
             </div>
 
 
