Revise trust bar and update lead body

--- a/lp4/index.html
+++ b/lp4/index.html
@@ -235,19 +235,31 @@
                 </a>
             </div>
             <div class="info-icons">
-                <span>⭐ Rated 4.9/5 by 17,290+ Happy Customers</span> | <span>🛡️ 100% Natural Ingredients</span> | <span>🇺🇸 Made in the USA</span>
+                <span>🔬 Based on Harvard Research</span> | <span>🍃 100% Plant-Based Method</span> | <span>✔️ Vetted by 20+ Scientific Studies</span>
             </div>
 
             <div class="content-text">
-                <p>Forget everything you think you know about losing weight after 45. The truth is, that stubborn fat around your belly, hips, and arms isn't your fault&mdash;and the gym is the last place you'll get rid of it.</p>
+                <p><strong>Lisa S. (Mother of 2, Rediscovered Her Confidence)</strong><br><strong>The Simple Ice Water Ritual That Changed Everything</strong></p>
 
-                <p>Sounds impossible, right? But listen. A recent Harvard discovery has revealed why some people are melting away fat not by working out, but while they sleep.</p>
+                <p><strong>Stop everything you're doing and read this.</strong></p>
 
-                <p>This isn't a gimmick. It&rsquo;s a bizarre 'Ice Water Hack' that takes six seconds before bed. This ritual activates what scientists call your body&rsquo;s &lsquo;slimming switches&rsquo;&mdash;powerful fat-burning engines that go dormant with age.</p>
+                <p>For years, I believed a lie. I thought the ever-growing fat around my belly, hips, and arms was my fault. I blamed myself after every failed diet.</p>
 
-                <p>Think of it like flicking a switch to turn your metabolism back on, forcing your body to dissolve the most stubborn fat for fuel overnight. It&rsquo;s so powerful that the billion-dollar weight loss industry is trying to scrub this information from the internet. They make money when you fail.</p>
+                <p>I was told to eat less and exercise more. I starved myself with salads while my family ate pizza. I spent hours on treadmills going nowhere. Does this sound familiar?</p>
 
-                <p>The short presentation revealing exactly how to do it is online, but they're actively trying to get it taken down. Watch it now while you still can.</p>
+                <p><strong>It's NOT your fault.</strong> And a recent, controversial Harvard discovery proves it.</p>
+
+                <p><strong>They found that most people over 40 have "dormant" slimming cells.</strong> It&rsquo;s like the fat-burning engine in your body has been switched off. This is why you can do everything "right" and the scale won't move.</p>
+
+                <p>But you can flip that switch back on.</p>
+
+                <p>This bizarre <strong>"Ice Water Hack"</strong> takes just six seconds before bed. This simple ritual activates those sleeping fat-burning engines, forcing your body to dissolve its most stubborn, deepest fat stores for fuel while you sleep.</p>
+
+                <p><strong>The results are almost unbelievable.</strong> People are waking up feeling lighter, more energetic, and are watching their favorite clothes become loose in just a few weeks. Imagine finally feeling confident at the beach or wearing that dress you&rsquo;ve hidden in your closet for years.</p>
+
+                <p>The billion-dollar weight loss industry is terrified of this. They make money keeping you stuck and hopeless. They've already tried to have this presentation removed from the internet.</p>
+
+                <p>So please, watch it now while you still can. It reveals the exact method you can start using at home tonight.</p>
             </div>
 
             <div class="button-container">
