--- a/lp4/index.html
+++ b/lp4/index.html
@@ -239,7 +239,7 @@
             </div>
 
             <div class="content-text">
-                <p><strong>Lisa S. (Mother of 2, Rediscovered Her Confidence)</strong><br><strong>The Simple Ice Water Ritual That Changed Everything</strong></p>
+                <p><strong>Lisa S. (Mother of 2, Rediscovered Her Confidence)</strong></p>
 
                 <p><strong>Stop everything you're doing and read this.</strong></p>
 
