--- a/lp4/index.html
+++ b/lp4/index.html
@@ -67,18 +67,30 @@
         }
 
         /* Content text */
+
         .content-text {
             max-width: 760px;
             margin: 0 auto;
             font-size: 18px;
+            overflow: hidden;
         }
 
         .content-text p {
             margin-bottom: 15px;
         }
 
+
         .content-text strong {
             font-weight: bold;
+        }
+
+        .lisa-photo {
+            float: left;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin: 0 20px 10px 0;
+            object-fit: cover;
         }
 
         /* Button */
@@ -239,6 +251,7 @@
             </div>
 
             <div class="content-text">
+                <img src="lisa.svg" alt="Photo of Lisa" class="lisa-photo">
                 <p><strong>Lisa S. (Mother of 2, Rediscovered Her Confidence)</strong></p>
 
                 <p><strong>Stop everything you're doing and read this.</strong></p>
